tests/func/parsing/error_reporting/unexpected/no_unexpected_token.err
/parsing/error_reporting/unexpected/unexpected_token.input:1:8: syntax error: unexpected tokens +, Add(+)
    1 | 3 + 4 - + 5
      |         ^^^ expected: number